// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expand not defined env 1`] = `"ERR_ELECTRON_BUILDER_ENV_NOT_DEFINED"`;

exports[`extraResources - two-package 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`extraResources on Linux 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`extraResources on macOS 1`] = `
Object {
  "mac": Array [],
}
`;

exports[`files 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`files 2`] = `
Array [
  "index.html",
  "index.js",
  "package.json",
  "test.h",
  "dist/electron/foo.js",
  "app/readme.md",
  "app/package.json/readme.md",
]
`;

exports[`files.from asar 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`map resources 1`] = `
Object {
  "linux": Array [],
}
`;
